# inc5000-parser

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  env.example  main.py  parser.py  pyproject.toml
.github/: dependabot.yml
docs/: analyzer.md  researcher.md  scraper.md
src/: analysis.py  analyzer.py  parser.py  research.py  researcher.py  scraper.py
