[project]
name = "inc5000-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=4.30.1",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "PIE",  # flake8-pie
    "RUF",  # ruff-specific (incl. RUF100 unused-noqa)
]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.12"
root = ["src"]
