[project]
name = "inc5000-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.2.1",
    "firecrawl-py>=4.30.2",
    "marimo>=0.23.10",
    "polars>=1.41.2",
    "scikit-learn>=1.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "PIE",  # flake8-pie
    "RUF",  # ruff-specific (incl. RUF100 unused-noqa)
]

[tool.ruff.lint.per-file-ignores]
"src/analysis.py" = ["N803", "N806", "B018"]

[tool.ty.environment]
python-version = "3.12"
root = ["src"]
